# Script_writter

./: pyproject.toml  requirements.txt  test.ipynb
src/services/: gemini_client.py  sarvam_client.py  srt_generator.py
uploads/: metadata.json
